--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,3 +33,12 @@ a,
     padding: 0 2rem;
   }
 }
+.menu-wrapper {
+  align-items: flex-start;
+  display: flex;
+  height: 100%;
+  justify-content: flex-start;
+  width: 100%;
+  outline: 0;
+  z-index: 9999;
+}
